# skill-zoo

./: .editorconfig  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_zh-CN.md  RELEASE_BODY.md  bunfig.toml  components.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: checklist.md  development.md  index.html  local-protocol.md  version.json
docs/dev/: release-guide.md
fixtures/local-protocol/: archive-v1-full.json  archive-v2-future.json  imports-v1-full.json  imports-v1-minimal.json  imports-v2-future.json  lock-v3-full.json  lock-v4-future.json
skills/app-release/: SKILL.md
skills/npm-release/: SKILL.md
skills/release/: SKILL.md
skills/tauri-updater/: SKILL.md
src/: App.test.tsx  App.tsx  index.css  index.html  indexCss.test.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: banners.json  recommended-repos.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  store.rs
src-tauri/src/commands/: mod.rs  plugin.rs  settings.rs  skill.rs
src-tauri/src/persistence/: archive.rs  external_imports.rs  metadata.rs  mod.rs  update_history.rs
src-tauri/src/services/: cli.rs  github.rs  lock.rs  mod.rs  plugin.rs  skill.rs  skill_usage.rs  tray.rs  watcher.rs
src-tauri/tests/: archive_persistence_test.rs  lock_test.rs  path_boundary_test.rs  persistence_test.rs  protocol_fixtures_test.rs  remove_skill_dir_test.rs  skill_service_test.rs
src-tauri/tests/common/: mod.rs
src/components/layout/: Header.tsx
src/components/plugins/: PluginBrowser.tsx  PluginCard.tsx  PluginDetail.tsx
src/components/settings/: AboutSection.tsx  AgentManagerDialog.tsx  AgentPathsSettings.test.tsx  AgentPathsSettings.tsx  AppUpdateSection.test.tsx  AppUpdateSection.tsx  AppUpdateShortcut.tsx  LanguageSettings.tsx  LocalImportsDialog.tsx  SettingsView.tsx  SkillCompanionSettings.test.tsx  SkillCompanionSettings.tsx  (+4 more)
src/hooks/: queryInvalidation.test.ts  queryInvalidation.ts  useAppUpdater.test.tsx  useAppUpdater.tsx  useCheckUpdates.ts  useConsistencyLabelSettings.ts  usePendingMutation.ts  usePlugins.ts  useRecentlyViewed.ts  useRepoLoadStage.test.ts  useRepoLoadStage.ts  useRepoPanelCollapsed.ts  useSettings.test.ts  useSettings.ts  useSidebarFilter.test.ts  useSidebarFilter.ts  useSkillIssues.test.ts  useSkillIssues.ts  useSkills.test.ts  useSkills.ts  useTheme.test.ts  useTheme.ts
src/i18n/: en.json  index.ts  zh.json
src/lib/: agents.ts  date.ts  platform.test.ts  platform.ts  skillDnd.ts  useEditorState.ts
src/public/: theme-init.js
src/test/: setup.ts  utils.tsx
src/types/: skills.ts
(+49 files in other folders)
